Ajout de l'appel au downtime.css
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1575 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigicore/downtime.html
+++ b/src/vigilo/themes/templates/vigicore/downtime.html
@@ -11,6 +11,7 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
 	<title>Schedule downtime</title>
     <link type="text/css" rel="stylesheet" href="${tg.url('/css/Autocompleter/Autocompleter.css')}" />
+    <link type="text/css" rel="stylesheet" href="${tg.url('/css/downtime.css')}" />
     <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/Autocompleter/Autocompleter.js')}"></script>
