--- a/src/vigilo/themes/templates/vigicore/downtime.html
+++ b/src/vigilo/themes/templates/vigicore/downtime.html
@@ -12,6 +12,7 @@
 	<title>Schedule downtime</title>
     <link type="text/css" rel="stylesheet" href="${tg.url('/css/Autocompleter/Autocompleter.css')}" />
     <link type="text/css" rel="stylesheet" href="${tg.url('/css/downtime.css')}" />
+    <link rel="stylesheet" type="text/css" href="${tg.url('/css/jxlib/jxtheme.uncompressed.css')}" />
     <script type="text/javascript" src="${tg.url('/js/mootools.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mootools-more.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/Autocompleter/Autocompleter.js')}"></script>
