--- a/src/vigilo/themes/public/vigicore/css/downtime.css
+++ b/src/vigilo/themes/public/vigicore/css/downtime.css
@@ -1,4 +1,18 @@
-#schedule_dowtime label
+/* ********************** */
+/* Schedule downtime form */
+/* ********************** */
+
+#schedule_downtime
+{
+	margin: 10px 0px ;
+}
+
+#schedule_downtime form.loginfields
+{
+    width: 530px;
+}
+
+#schedule_downtime label
 {
     clear: left;
     float: left;
@@ -9,7 +23,7 @@
     vertical-align: middle;
 }
 
-#schedule_dowtime input.text
+#schedule_downtime input.text
 {
     float: left;
     margin-top: 5px;
@@ -22,7 +36,7 @@
     color: #fff;
 }
 
-#schedule_dowtime textarea
+#schedule_downtime textarea
 {
     float: left;
     margin-top: 5px;
@@ -34,12 +48,12 @@
     color: #fff;
 }
 
-#schedule_dowtime div.calendar_field label
+#schedule_downtime div.calendar_field label
 {
     width: 100px;
 }
 
-#schedule_dowtime div.calendar_field input.calendardatetimepicker
+#schedule_downtime div.calendar_field input.calendardatetimepicker
 {
     float: left;
     margin-right: 10px;
@@ -52,16 +66,25 @@
     color: #fff;
 }
 
-#schedule_dowtime div.calendar_field input.date_field_button
+#schedule_downtime input#duration_trigger
+{
+    float: right;
+}
+
+#schedule_downtime div.calendar_field  input.date_field_button
 {
     float: left;
     margin-top: 9px;
 }
 
-#scheduled_downtimes
-{
-    width: 850px;
-    margin: auto;
+
+/* ************** */
+/* Downtime table */
+/* ************** */
+
+#scheduled_downtimes{
+	width: 850px;
+	margin: auto;
 }
 
 #scheduled_downtimes h2
@@ -99,26 +122,31 @@
 
 #scheduled_downtimes table
 {
-    clear: both;
-    margin: auto;
-    width: 100%;
-    text-align: center;
-/*   border: 1px solid #31808C;*/
+	clear: both;
+	margin: auto;
+	width: 100%;
+	text-align: center;
+/*	border: 1px solid #31808C;*/
 }
 
 #scheduled_downtimes table thead tr
 {
-    background-color: #F0F0F0;
+	background-color: #F0F0F0;
 }
 
-#scheduled_downtimes table thead tr.asc
+#scheduled_downtimes table th
 {
-    background-color: #F0F0F0;
+    font-weight:bold;
 }
 
-#scheduled_downtimes table thead tr.desc
+#scheduled_downtimes table th.asc
 {
-    background-color: #F0F0F0;
+    background-color: #99FF99;
+}
+
+#scheduled_downtimes table th.desc
+{
+    background-color: #FF9900;
 }
 
 #scheduled_downtimes table tr:hover, 
@@ -138,52 +166,50 @@
     background-color: #FFFFFF;
 }
 
-#scheduled_downtimes table th, table td
+#scheduled_downtimes table th, 
+#scheduled_downtimes table td
 {
-    padding: 2px 10px;
-    width: 80px;
-    text-align: center;
+	padding: 2px 10px;
+	width: 80px;
+	text-align: center;
 }
 
-#scheduled_downtimes table th.action_col, table td.action_col
+#scheduled_downtimes table th.action_col, 
+#scheduled_downtimes table td.action_col
 {
-    width: 80px;
+	width: 80px;
 }
 
-#scheduled_downtimes table th.action_col image, table td.action_col img
+#scheduled_downtimes table th.action_col image, 
+#scheduled_downtimes table td.action_col img
 {
-    display: inline;
-}
-
-#scheduled_downtimes table th
-{
-    font-weight:bold;
+	display: inline;
 }
 
 #scheduled_downtimes table a
 {
-    text-decoration: none;
-}
-
-p.pagelist strong {
-    padding: 5px;
+	text-decoration: none;
 }
 
 p.pagelist {
-    text-align: center;
+	margin: 10px 0;
+	text-align: center;
 }
 
-a.prev_page {
-    background: url(../images/arrow-left.png) no-repeat;
-    padding: 12px 18px 15px;
-    text-decoration: none;
+p.pagelist strong {
+	padding: 5px;
 }
 
-a.next_page {
-    background: url(../images/arrow-right.png) no-repeat;
-    padding: 12px 18px 15px;
-    margin-left: 4px;
-    text-decoration: none;
+.pager_curpage, .pager_link{
+	vertical-align: 80%;
+}
+
+.prev_page{
+	margin-right: 2px;
+}
+
+.next_page{
+	margin-left: 3px;
 }
 
 #downtime_duration_form {
@@ -200,4 +226,5 @@ a.next_page {
     color: #fff;
     padding: 10px 240px 18px 10px;
 }
+
 
