Ajout d'un champ dans le formulaire de recherche permettant de filtrer selon la date.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1590 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
+++ b/src/vigilo/themes/public/vigiboard/css/vigiboard_style.css
@@ -159,3 +159,33 @@ clear:both;
 #DetailsDialog_peak_state {
     font-weight: bold;
 }
+
+
+/* Formulaire de recherche */
+
+form#search_form .labelcol
+{
+    width: 100px;
+}
+
+form#search_form .fieldcol
+{
+    width: 250px;
+}
+
+form#search_form .textfield
+{
+    width: 95%;
+}
+
+form#search_form .calendardatetimepicker
+{
+    width: 60%;
+}
+
+form#search_form .date_field_button
+{
+    width: 34%;
+}
+
+
