Correction de la profondeur d'affichage du calendrier permettant de sélectionner la date dans le formulaire de recherche.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1594 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -119,7 +119,7 @@ ${tmpl_context.search_form()}
             content: "search_form",
             onOpen: window.dlg_open_handler,
             onClose: window.dlg_close_handler,
-            width: 350,
+            width: 400,
             height: 200,
             closed: true,
         });
@@ -149,6 +149,14 @@ ${tmpl_context.search_form()}
         );
 
         change_refresh_rate(${tg.session.get("refresh", 0)});
+
+        $('from_date_trigger').addEvent('click', function () {
+            $$$$(".calendar").setStyles({"zIndex": window.search_dialog.domObj.getStyle('zIndex').toInt()});
+        });
+
+        $('to_date_trigger').addEvent('click', function () {
+            $$$$(".calendar").setStyles({"zIndex": window.search_dialog.domObj.getStyle('zIndex').toInt()});
+        });
     });
 
     function change_fontsize(size) {
