Déplacement de la fonction sql_escape_like() utilisée par Vigiboard & Vigicore vers le modèle (dans vigilo.models.functions). Ajout de champs pour la recherche par nom de groupe/service dans Vigiboard. TODO: Ajout d'auto-complétion sur ces champs. TODO: Prise en compte des champs dans le filtrage.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@1607 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -120,12 +120,14 @@ ${tmpl_context.search_form()}
             onOpen: window.dlg_open_handler,
             onClose: window.dlg_close_handler,
             width: 400,
-            height: 200,
+            height: 250,
             closed: true,
         });
         window.search_dialog.toggleCollapse();
         window.search_dialog.toggleCollapse();
 
+        $('search_form_hostgroup').set('value', "${search['hostgroup'].encode('backslash')}");
+        $('search_form_servicegroup').set('value', "${search['servicegroup'].encode('backslash')}");
         $('search_form_host').set('value', "${search['host'].encode('backslash')}");
         $('search_form_service').set('value', "${search['service'].encode('backslash')}");
         $('search_form_output').set('value', "${search['output'].encode('backslash')}");
